--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Apprendre Git</title>
 </head>
 <body>
+    <h1> Commands </h1>
+    <p>
+        9  cd Skrivbord\
+        10  ls -la
+        11  cd FO-2022\
+        12  LS
+        13  cd Apprendre_Git\
+        14  ls
+        15  git init
+        16  ls
+        17  ls -a
+        18  git add index.html\
+        19  git add index.html
+        20  git commit -m "First version"
+        21  git config --global user.email "taydji01@hotmail.se"
+        22  git config --global user.name "z-orgx"
+        23  git status
+    </p>
     
 </body>
 </html>
