--- a/index.html
+++ b/index.html
@@ -9,21 +9,42 @@
 <body>
     <h1> Commands </h1>
     <p>
+        1  tree
+        2  cd FO-22\
+        3  cd css-music-player\
+        4  cat index.html
+        5  cls
+        6  ps
+        7  dir
+        8  cd ..
         9  cd Skrivbord\
-        10  ls -la
-        11  cd FO-2022\
-        12  LS
-        13  cd Apprendre_Git\
-        14  ls
-        15  git init
-        16  ls
-        17  ls -a
-        18  git add index.html\
-        19  git add index.html
-        20  git commit -m "First version"
-        21  git config --global user.email "taydji01@hotmail.se"
-        22  git config --global user.name "z-orgx"
-        23  git status
+       10  ls -la
+       11  cd FO-2022\
+       12  LS
+       13  cd Apprendre_Git\
+       14  ls
+       15  git init
+       16  ls
+       17  ls -a
+       18  git add index.html
+       19  git commit -m "First version"
+       20  git config --global user.email "taydji01@hotmail.se"
+       21  git config --global user.name "z-orgx"
+       22  git add index.html\
+       23  git add index.html
+       24  git commit -m "updated"
+       25  git log
+       26  git diff b336de56 01bf7453
+       27  git push origin master
+       28  git status
+       29  git push origin main
+       30  git push -u origin main
+       31  git push -u origin https://github.com/n-orgx/FODev.git
+       32  git push -u  https://github.com/n-orgx/FODev.git
+       33  git push --set-upstream  https://github.com/n-orgx/FODev.git
+       34  git push --set-upstream  https://github.com/n-orgx/FODev.git master
+       35  git push --set-upstream  https://github.com/n-orgx/FODev.git main
+       36  git push --set-upstream  https://github.com/n-orgx/FODev.git master
     </p>
     
 </body>
